# sfc

./: BUILD.bazel  WORKSPACE  client.go  client_test.go  go.mod  handler.go
.github/workflows/: push.yml  release.yml
cmd/sfc/: BUILD.bazel  main.go
www/: index.html
