load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/uhthomas/sfc",
)

filegroup(
    name = "www",
    srcs = glob(["www/**"]),
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "handler.go",
    ],
    importpath = "github.com/uhthomas/sfc",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
    ],
)
